<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="api_key" translatable="false">a2432e48034ec0dd6fa038881e6bd1b1</string>
    <string name="current_location">Current location</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="weatherItemView">View visually represents weather of week days</string>
    <string name="city">City</string>
    <string name="text_location_dialog_title">Choose city location</string>
    <string name="tempmin">tempMin</string>
    <string name="timetempmin">timeTempMin</string>
    <string name="tempmax">tempMax</string>
    <string name="timetempmax">timeTempMax</string>
    <string name="summary">summary</string>
    <string name="location">location</string>
    <string name="date">date</string>
    <string name="uvindex">uvIndex</string>
    <string name="humidity">humidity</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="sync_time">Sync time</string>
    <string name="addCityToFavourites">Added to favourites!</string>
    <string name="removeCityFromFavourites">Removed from favourites!</string>
    <string name="choose_city">Choose city</string>
    <string name="choose_place">Choose place</string>
    <string name="display_weather_for_chosen_place">Display weather for chosen place</string>
    <string name="choose_favorite_place">Choose favorite place</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="details">Details</string>
    <string name="no_data">No data</string>
    <string name="minutely">Minutely</string>
    <string name="no_data_to_show">No currently data to show.</string>
    <string name="degree">°</string>
    <string name="permission_denied">Permission denied :(</string>
    <string name="error_message">Can\'t find that place. Try again.</string>
    <string name="fahrenheitUnit">F°</string>
    <string name="celsiusUnit">C°</string>
    <string name="calm">Calm</string>
    <string name="light_air">Light Air</string>
    <string name="light_breeze">Light Breeze</string>
    <string name="gentle_breeze">Gentle Breeze</string>
    <string name="moderate_breeze">Moderate Breeze</string>
    <string name="fresh_breeze">Fresh Breeze</string>
    <string name="strong_breeze">Strong Breeze</string>
    <string name="near_gale">Near Gale</string>
    <string name="gale">Gale</string>
    <string name="strong_gale">Strong Gale</string>
    <string name="storm">Storm</string>
    <string name="violent_storm">Violent Storm</string>
    <string name="hurricane">Hurricane</string>
    <string name="overview">Overview</string>
    <string name="mph">mph</string>
    <string name="kmh">kmh</string>
    <string name="ensure_that_location_is_turned_on">Ensure that location is turned on.</string>
</resources>
